--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Website Shopify",
   "main": "index.js",
   "scripts": {
+    "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/nikko-webforest/deadbeat-shopify#readme",
   "dependencies": {
     "gulp": "^4.0.2",
+    "gulp-install": "^1.1.0",
     "gulp-sass": "^5.1.0",
     "node-sass": "^9.0.0",
     "sass": "^1.66.1"
